<resources>
    <string name="app_name">TripPlanner</string>
    <string name="facebook_app_id">620302168179784</string>
    <string name="fb_login_protocol_scheme">fb620302168179784</string>
    <string name="parse_server_url">https://android-trip-planner.herokuapp.com/parse/</string>
    <string name="parse_app_id">droidDevsTripPlanner</string>
    <string name="google_places_api_key">AIzaSyBLM-VesFSnqP6wvQJFB0pxOmMX4QDHHig</string>
    <string name="title_activity_add_edit_trip">AddEditTripActivity</string>

    <string name="create_trip">Create new trip</string>
    <string name="past_trips">Past trips</string>
    <string name="log_out">Log out</string>

    <string name="trip_addedit_name">Trip name</string>
    <string name="trip_addedit_start_date">Start date</string>
    <string name="trip_addedit_end_date">End date</string>
    <string name="trip_addedit_destination">Destination</string>
    <string name="trip_addedit_add_destination">Add Destination</string>
    <string name="trip_addedit_load_failed">Can\'t load trip details</string>
    <string name="trip_addedit_default_trip_name">Trip to %1$s</string>
    <string name="trip_addedit_save_success">Trip was successfully created</string>
    <string name="trip_addedit_update_success">Trip was successfully updated</string>
    <string name="trip_addedit_save_failed">Can\'t save trip</string>
    <string name="trip_addedit_error_message_empty_name">Please select a name</string>
    <string name="trip_addedit_error_message_empty_destination">Please select a destination</string>
    <string name="trip_create">Create trip</string>
    <string name="trip_edit">Edit trip</string>

    <string name="trip_menu_accessibility">Trip Menu</string>
    <string name="trip_image_accessibility">Trip Image</string>

    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>

    <string name="action_edit">Edit</string>
    <string name="action_list">List</string>
    <string name="action_map">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="saved_places_nothing">Nothing saved</string>
    <string name="saved_places_empty_hint">Tap a suggested place icon to add it to your Saved places</string>
    <string name="saved_places">Saved Places</string>

    <string name="one_day">1\nday</string>
    <string name="two_days">2\ndays</string>
    <string name="three_days">3\ndays</string>
    <string name="one_week">1\nweek</string>
    <string name="two_weeks">2\nweeks</string>
    <string name="pick_days">pick\ndays</string>
    <string name="done">Done</string>

    <string name="empty_data">There is no data</string>
    <string name="failure">Ops..something went wrong. Please reload the content</string>
    <string name="loading">Loading...</string>

    <string name="directions">Directions</string>
    <string name="call">Call</string>
    <string name="share">Share</string>

    <string name="trips.title">Trips</string>

</resources>
